fixed padding issue in view contacts no more white space when there is no content inside the contact collapse body

--- a/src/components/cards/contact_card.scss
+++ b/src/components/cards/contact_card.scss
@@ -11,9 +11,5 @@
     padding-right: 7%;
 }
 
-.collapsible{ 
-    .collapsible-body.col-body{
-    padding: 0px;
-}}
 
 
