--- a/src/components/prospect/contact.scss
+++ b/src/components/prospect/contact.scss
@@ -9,7 +9,12 @@
     }
     .collapsible-body{
         padding: 1rem;
+        
     }
+    .collapsible-body.col-body-none{
+        padding: 0px;
+    }
+
     .input-field{
         float: none;
     }
